	  routine - the QofSetterFunc is OK.

	Neil Williams' QOF sync patch:
	* This patch updates the QOF merge code to current QOF to bring
	  the HEAD branch into sync. This update also makes
	  qof_book_merge_param_as_string output strings that are
	  compatible with QSF: using false instead of FALSE in string
	  output and using the QSF_XSD_TIME for the datestrings.
	
2005-01-29  Derek Atkins  <derek@ihtfp.com>

	David Montenegro's patch for bugs #95551, #124367.
	* src/report/standard-reports/account-summary.scm:
	  Rewrote account summary report. Now has fields for
	  more account metadata. Properly handles mixed
	  asset/liability subaccounts.
	* src/report/standard-reports/html-acct-table.scm:
	  Added functionality (account-type &c) and bug fixes
	  (lone zb subtotals, spurious 'recursive-bal, typos)
	  needed to make the new account-summary.scm work.

	Thomas Bushnell's patch to protect non-backup pruning (#164875)
	* src/backend/file/gnc-backend-file.c:
	  When working on the file foo.xac, backups are named
	  foo.DATE.xac.  But the backup file pruner will prune any old
	  file named foo.DATE.anything.

2005-01-29  Christian Stimming  <stimming@tuhh.de>

	* configure.in, src/tax/us/gncmod-tax-us.c,
	src/report/locale-specific/us/gncmod-locale-reports-us.c,
	src/app-utils/gnc-ui-util.c: Make localized tax categories
	disabled by default; can be enabled by
	--enable-locale-specific-tax switch.

	* src/import-export/hbci/dialog-hbcitrans.c: Enable debit notes
	again. Various other improvements.

	* src/import-export/hbci/druid-hbci-initial.c (on_aqhbci_button),
	configure.in: Adapt to latest changes in aqbanking; external
	wizard name is no longer hard-coded here but is asked from
	aqbanking.

2005-01-23  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-core/gncInvoice.c: Properly accumulate
	  splits (bug #165053).  Also fixes a (related) memory leak
	  (caused by the same lack-of-reference to accumulated splits).
